[package]
name = "economic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
cercis = "0.3.1"
num-format = "0.4.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs"] }
